--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "http": "0.0.0",
     "request": "^2.88.0",
     "vue": "^2.6.10",
-    "vuejs": "^3.0.1"
+    "vuejs": "^3.0.1",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {},
   "scripts": {
