--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "viabricowebsite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "connexion.html",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "http": "0.0.0",
     "request": "^2.88.0",
